--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
 .App {
+  
+  display: flex;
+  background-color: blue;
+  justify-content: center;
+  border-radius: 15px;
+}
+  
+.card-content{
+  width: 400px;
+  border: 1px solid whitesmoke;
+  margin: 30px;
+  font-size: 15px;
+  justify-content: center;
+  background-color:aliceblue;
+  padding: 5px;
+  letter-spacing: .1rem;
+  border-radius: 15px;
+}
+.hander{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.subhander{
+  text-align: center;
+}
+.d-grid{
+font-size: 15px;
+  border-radius: 5rem;
+  text-align: center;
+  font-weight: bold;
+  padding: 1rem;
+ background-color: blue;
+  color:black
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
